--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "node-libcurl",
+  "name": "@ardatan/node-libcurl",
   "version": "4.0.0",
   "description": "The fastest http(s) client (and much more) for Node.js - Node.js bindings for libcurl",
   "keywords": [
     "node-curl",
     "curl",
     "libcurl",
-    "node-libcurl",
-    "axios",
-    "request"
+    "node-libcurl"
   ],
-  "homepage": "https://github.com/JCMais/node-libcurl",
+  "homepage": "https://github.com/ardatan/node-libcurl",
   "bugs": {
-    "url": "https://github.com/JCMais/node-libcurl/issues"
+    "url": "https://github.com/ardatan/node-libcurl/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/JCMais/node-libcurl.git"
+    "url": "git://github.com/ardatan/node-libcurl.git"
   },
   "license": "MIT",
-  "author": "Jonathan Cardoso <me@jonathancardoso.com>",
+  "author": "Arda TANRIKULU <ardatanrikulu@gmail.com>",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -34,7 +32,7 @@
     "module_path": "./lib/binding/",
     "remote_path": "./v{version}/",
     "package_name": "{module_name}-v{version}-{node_abi}-{platform}-{arch}-{libc}.tar.gz",
-    "host": "https://github.com/JCMais/node-libcurl/releases/download"
+    "host": "https://github.com/ardatan/node-libcurl/releases/download"
   },
   "scripts": {
     "ae": "api-extractor run --local --verbose",
@@ -77,13 +75,13 @@
     ]
   },
   "dependencies": {
-    "@mapbox/node-pre-gyp": "1.0.11",
+    "@mapbox/node-pre-gyp": "^1.0.11",
     "env-paths": "2.2.0",
-    "nan": "2.18.0",
-    "node-gyp": "10.0.1",
-    "npmlog": "7.0.1",
-    "rimraf": "5.0.5",
-    "tslib": "2.6.2"
+    "nan": "^2.20.0",
+    "node-gyp": "^10.2.0",
+    "npmlog": "^7.0.1",
+    "rimraf": "^5.0.5",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@commitlint/cli": "18.4.3",
@@ -129,8 +127,12 @@
     "typedoc-plugin-nojekyll": "1.0.1",
     "typescript": "5.3.2"
   },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "engines": {
     "node": ">=16.14"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "np": {
     "cleanup": false
