--- a/.github/workflows/build-lint-test.yaml
+++ b/.github/workflows/build-lint-test.yaml
@@ -29,12 +29,13 @@ jobs:
           - 18
           - 20
           - 21
+          - 22
     env:
       LIBCURL_RELEASE: ${{ matrix.libcurl-release }}
       LATEST_LIBCURL_RELEASE: ${{ matrix.libcurl-release }}
     steps:
       - id: timestamp
-        run: echo "::set-output name=timestamp::$(timestamp +%s)"
+        run: echo "::set-output name=timestamp::$(${{ runner.os == 'Windows' && 'get-date -format o' || 'timestamp +%s'}})"
       - name: Restore the previous run result
         uses: actions/cache@v3
         with:
@@ -55,19 +56,7 @@ jobs:
         if: matrix.node-libcurl-cpp-std
       - if: runner.os == 'macOS'
         name: Install Needed packages on macOS
-        run: brew install coreutils wget automake libtool cmake gnu-sed m4
-      # not using brew for that one as we need 2.69
-      - if: runner.os == 'macOS'
-        name: Install autoconf
-        run: |
-          curl -O -L http://ftpmirror.gnu.org/autoconf/autoconf-2.69.tar.gz
-          tar -xzf autoconf-2.69.tar.gz
-          cd autoconf-*
-          ./configure
-          make
-          make install
-          autoconf --version
-          ln -s /usr/local/bin/glibtoolize /usr/local/bin/libtoolize
+        run: brew install coreutils wget automake autoconf libtool cmake gnu-sed m4
       - if: runner.os == 'Linux'
         name: Install Needed packages on Linux
         run: sudo apt-get install -y cmake
@@ -156,7 +145,7 @@ jobs:
       ELECTRON_VERSION: ${{ matrix.electron-version }}
     steps:
       - id: timestamp
-        run: echo "::set-output name=timestamp::$(timestamp +%s)"
+        run: echo "::set-output name=timestamp::$(${{ runner.os == 'Windows' && 'get-date -format o' || 'timestamp +%s'}})"
       - name: Restore the previous run result
         uses: actions/cache@v3
         with:
@@ -177,17 +166,6 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Install Needed packages
         run: brew install coreutils wget automake libtool cmake gnu-sed m4
-      # not using brew for that one as we need 2.69
-      - name: Install autoconf
-        run: |
-          curl -O -L http://ftpmirror.gnu.org/autoconf/autoconf-2.69.tar.gz
-          tar -xzf autoconf-2.69.tar.gz
-          cd autoconf-*
-          ./configure
-          make
-          make install
-          autoconf --version
-          ln -s /usr/local/bin/glibtoolize /usr/local/bin/libtoolize
       - name: Output yarn cache dir
         id: yarn-cache-dir
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -236,99 +214,3 @@ jobs:
           path: ./logs/
           retention-days: 5
       - run: echo "::set-output name=run_result::success" > run_result
-
-  # disabled until nwjs supports newer node-gyp versions + python 3
-  # build-and-test-nwjs:
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       # we use CircleCI for linux binaries
-  #       os:
-  #         - macos-11
-  #       libcurl-release:
-  #         - 7.86.0
-  #       node:
-  #         - 18
-  #       nwjs-version:
-  #         - 0.69.1
-  #         - 0.68.1
-  #         - 0.67.1
-  #   env:
-  #     LIBCURL_RELEASE: ${{ matrix.libcurl-release }}
-  #     LATEST_LIBCURL_RELEASE: ${{ matrix.libcurl-release }}
-  #     NWJS_VERSION: ${{ matrix.nwjs-version }}
-  #   steps:
-  #     - id: timestamp
-  #       run: echo "::set-output name=timestamp::$(timestamp +%s)"
-  #     - name: Restore the previous run result
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: |
-  #           run_result
-  #         key: ${{ github.run_id }}-${{ github.job }}-${{ steps.timestamp.outputs.timestamp }}
-  #         restore-keys: |
-  #           ${{ github.run_id }}-${{ github.job }}-
-  #     - id: run_result
-  #       run: cat run_result 2>/dev/null || echo 'default'
-  #     - run: echo "NODE_LIBCURL_CPP_STD=${{ matrix.node-libcurl-cpp-std }}" >> $GITHUB_ENV
-  #       if: matrix.node-libcurl-cpp
-  #     - name: Checkout
-  #       uses: actions/checkout@main
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: ${{ matrix.node }}
-  #     - name: Install Needed packages
-  #       run: brew install coreutils wget automake libtool cmake gnu-sed m4
-  #     # not using brew for that one as we need 2.69
-  #     - name: Install autoconf
-  #       run: |
-  #         curl -O -L http://ftpmirror.gnu.org/autoconf/autoconf-2.69.tar.gz
-  #         tar -xzf autoconf-2.69.tar.gz
-  #         cd autoconf-*
-  #         ./configure
-  #         make
-  #         make install
-  #         autoconf --version
-  #         ln -s /usr/local/bin/glibtoolize /usr/local/bin/libtoolize
-  #     - name: Output yarn cache dir
-  #       id: yarn-cache-dir
-  #       run: echo "::set-output name=dir::$(yarn cache dir)"
-  #     - name: Restore Yarn Cache
-  #       uses: actions/cache@v3
-  #       id: yarn-cache
-  #       with:
-  #         path: ${{ steps.yarn-cache-dir.outputs.dir }}
-  #         key: v1-${{ runner.os }}-yarn-cache-${{ github.ref }}-${{ hashFiles('**/yarn.lock') }}
-  #         restore-keys: |
-  #           v1-${{ runner.os }}-yarn-cache-${{ github.ref }}-
-  #           v1-${{ runner.os }}-yarn-cache-
-  #     - name: Restore libcurl deps cache
-  #       uses: actions/cache@v3
-  #       id: libcurl-deps-cache
-  #       with:
-  #         path: |
-  #           ~/.node-gyp
-  #           ~/deps
-  #         key: v4-${{ runner.os }}-libcurl-deps-cache-nwjs-${{ matrix.nwjs-version }}
-  #         restore-keys: |
-  #           v4-${{ runner.os }}-libcurl-deps-cache-nwjs-${{ matrix.nwjs-version }}
-  #     - name: 'Set GIT_TAG'
-  #       if: startsWith(github.ref, 'refs/tags')
-  #       run: echo "GIT_TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-  #     - name: 'Build node-libcurl'
-  #       if: steps.run_result.outputs.run_result != 'success'
-  #       run: |
-  #         RUN_TESTS=false \
-  #         RUN_PREGYP_CLEAN=false \
-  #         PUBLISH_BINARY=false \
-  #           ./scripts/ci/build.sh
-  #     - name: Upload artifacts
-  #       if: always() && steps.run_result.outputs.run_result != 'success'
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: build-logs-${{ matrix.os }}-${{ matrix.libcurl-release }}-${{ matrix.nwjs-version }}
-  #         path: ./logs/
-  #         retention-days: 5
-  #     - run: echo "::set-output name=run_result::success" > run_result
