--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,54 +78,56 @@ jobs:
             node: 18
             node_abi: node-v108
             platform: darwin
-            arch: x64
+            arch: arm64
             libc: unknown
           - os: macos-latest
             node: 20
             node_abi: node-v115
             platform: darwin
-            arch: x64
+            arch: arm64
             libc: unknown
           - os: macos-latest
             node: 21
             node_abi: node-v120
             platform: darwin
-            arch: x64
+            arch: arm64
             libc: unknown
           - os: macos-latest
             node: 22
             node_abi: node-v127
             platform: darwin
-            arch: x64
+            arch: arm64
             libc: unknown
         # m1
           - os: macos-latest-large
             node: 18
             node_abi: node-v108
             platform: darwin
-            arch: arm64
+            arch: x64
             libc: unknown
           - os: macos-latest-large
             node: 20
             node_abi: node-v115
             platform: darwin
-            arch: arm64
+            arch: x64
             libc: unknown
           - os: macos-latest-large
             node: 21
             node_abi: node-v120
             platform: darwin
-            arch: arm64
+            arch: x64
             libc: unknown
           - os: macos-latest-large
             node: 22
             node_abi: node-v127
             platform: darwin
-            arch: arm64
+            arch: x64
             libc: unknown
     steps:
       - name: checkout
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
       - name: Disable Windows Defender
         if: runner.os == 'Windows'
         run: Set-MpPreference -DisableRealtimeMonitoring $true
@@ -136,14 +138,16 @@ jobs:
       - name: Install NASM
         if: runner.os == 'Windows'
         uses: ilammy/setup-nasm@v1
-      - name: Set include dirs
-        if: runner.os == 'macOS'
-        run: export npm_config_curl_include_dirs="$(xcrun --show-sdk-path)/usr/include"
       - name: Install Required Libraries
-        if: matrix.os == 'ubuntu-latest'
+        if: runner.os == 'Linux'
         run: sudo apt update && sudo apt install -y libcurl4-openssl-dev libssl-dev
+      - name: Setup Xcode
+        if: runner.os == 'macOS'
+        uses: maxim-lobanov/setup-xcode@v1
       - uses: the-guild-org/shared-config/setup@v1
         name: set up env
+        env:
+          npm_config_curl_include_dirs: "${{ runner.os == 'macOS' && '$(xcrun --show-sdk-path)/usr/include' || '' }}"
         with:
           node-version: ${{ matrix.node }}
       - name: upload artifact
@@ -152,3 +156,4 @@ jobs:
         with:
           name: node-libcurl-v4.0.0-${{ matrix.node_abi }}-${{ matrix.platform }}-${{ matrix.arch }}-${{ matrix.libc }}
           path: lib/binding/node_libcurl.node
+          overwrite: true
