--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,11 +56,12 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: reveal staged tarball
         id: reveal_staged_tarball
-        run: yarn --silent pregyp reveal staged_tarball --silent
+        run: |
+          echo "STAGED_TARBALL=$(yarn --silent pregyp reveal staged_tarball --silent)"
       - name: upload artifact
         id: upload_artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.reveal_staged_tarball.outputs.staged_tarball }}
-          path: ${{ steps.reveal_staged_tarball.outputs.staged_tarball }}
+          name: ${{ steps.reveal_staged_tarball.outputs.STAGED_TARBALL }}
+          path: ${{ steps.reveal_staged_tarball.outputs.STAGED_TARBALL }}
           overwrite: true
