--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,10 +61,14 @@ jobs:
         id: reveal_staged_tarball
         run: |
           echo "STAGED_TARBALL=$(yarn --silent pregyp reveal staged_tarball --silent)" >> $GITHUB_OUTPUT
+      - name: reveal staged tarball name
+        id: reveal_staged_tarball_name
+        run: |
+          echo "STAGED_TARBALL_NAME=$(yarn --silent pregyp reveal staged_tarball --silent | awk -F'/' '{print $NF}'"  >> $GITHUB_OUTPUT
       - name: upload artifact
         id: upload_artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.reveal_staged_tarball.outputs.STAGED_TARBALL }}
+          name: ${{ steps.reveal_staged_tarball_name.outputs.STAGED_TARBALL_NAME }}
           path: ${{ steps.reveal_staged_tarball.outputs.STAGED_TARBALL }}
           overwrite: true
