--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,11 +64,11 @@ jobs:
       - name: reveal staged tarball name
         id: reveal_staged_tarball_name
         run: |
-          echo "STAGED_TARBALL_NAME=$(yarn --silent pregyp reveal staged_tarball --silent | awk -F'/' '{print $NF}') >> $GITHUB_OUTPUT
-      - name: upload artifact
-        id: upload_artifact
-        uses: actions/upload-artifact@v4
+          echo "STAGED_TARBALL_NAME=$(yarn --silent pregyp reveal staged_tarball --silent | rev | cut -d'/' -f1 | rev) >> $GITHUB_OUTPUT
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          name: ${{ steps.reveal_staged_tarball_name.outputs.STAGED_TARBALL_NAME }}
-          path: ${{ steps.reveal_staged_tarball.outputs.STAGED_TARBALL }}
-          overwrite: true
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ steps.reveal_staged_tarball.outputs.STAGED_TARBALL }}
+          asset_name: ${{ steps.reveal_staged_tarball_name.outputs.STAGED_TARBALL_NAME }}
+          tag: v4.0.0
