--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,10 +65,14 @@ jobs:
         id: reveal_staged_tarball_name
         run: |
           echo "STAGED_TARBALL_NAME=$(yarn --silent pregyp reveal package_name)" >> $GITHUB_OUTPUT
+      - name: reveal package version
+        id: reveal_package_version
+        run: |
+          echo "PACKAGE_VERSION=$(yarn --silent pregyp reveal version)" >> $GITHUB_OUTPUT
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ steps.reveal_staged_tarball.outputs.STAGED_TARBALL }}
           asset_name: ${{ steps.reveal_staged_tarball_name.outputs.STAGED_TARBALL_NAME }}
-          tag: v4.0.0
+          tag: v${{ steps.reveal_staged_tarball_name.outputs.PACKAGE_VERSION }}
