--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,6 +69,12 @@ jobs:
         id: reveal_package_version
         run: |
           echo "PACKAGE_VERSION=$(yarn --silent pregyp reveal version)" >> $GITHUB_OUTPUT
+      - name: Publish to npm
+        if: ${{ github.event_name == 'push' }}
+        run: yarn publish --access public
+        continue-on-error: true
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
