--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,11 +46,16 @@ jobs:
       - name: Setup Xcode
         if: runner.os == 'macOS'
         uses: maxim-lobanov/setup-xcode@v1
+      - name: Install cURL
+        if: runner.os == 'macOS'
+        run: brew install curl
+      - name: Setup cURL
+        if: runner.os == 'macOS'
+        run: echo "$(brew --prefix)/opt/curl/bin" >> $GITHUB_PATH
       - uses: the-guild-org/shared-config/setup@v1
         name: set up env
         env:
           npm_config_curl_include_dirs: "${{ runner.os == 'macOS' && '$(xcrun --show-sdk-path)/usr/include' || '' }}"
-          npm_config_macos_universal_build: true
         with:
           node-version: ${{ matrix.node }}
       - name: package tarball
