--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,6 +58,8 @@ jobs:
           npm_config_curl_include_dirs: "${{ runner.os == 'macOS' && '$(xcrun --show-sdk-path)/usr/include' || '' }}"
         with:
           node-version: ${{ matrix.node }}
+      - name: Build
+        run: yarn pregyp rebuild
       - name: package tarball
         run: yarn pregyp package
       - name: test package tarball
