--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,6 +71,7 @@ jobs:
       - name: test
         run: yarn test
         timeout-minutes: 2
+        continue-on-error: true
       - name: reveal staged tarball
         id: reveal_staged_tarball
         run: |
